# Project-Ellis

./: .gitignore  CMakeLists.txt  README.md
Syntax/elysia/: CHANGELOG.md  README.md  package.json
Syntax/elysia/examples/: list.ely
Syntax/elysia/syntaxes/: elysia.tmLanguage.json
